--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.2",
-		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-separator": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tanstack/react-query": "^5.64.0",
 		"@tanstack/react-query-devtools": "^5.64.0",
 		"@tanstack/react-table": "^8.20.5",
-		"class-variance-authority": "^0.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
+		"dompurify": "^3.2.4",
 		"github-markdown-css": "^5.7.0",
 		"lucide-react": "^0.453.0",
 		"react": "^18.3.1",
@@ -30,6 +33,7 @@
 		"react-markdown": "^9.0.1",
 		"react-router-dom": "^6.27.0",
 		"react-spinners": "^0.14.1",
+		"react-time-ago": "^7.3.3",
 		"react-toastify": "^10.0.6",
 		"remark-gfm": "^4.0.0",
 		"tailwind-merge": "^2.5.4",
